style: change colors and font, fix section alignment

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,300;8..144,400;8..144,500;8..144,600;8..144,700&display=swap");
 
 :root {
-	--primary-color: #2d3142;
-	--secondary-color: #e6af2e;
+	--primary-color: #2a3d45;
+	--secondary-color: #c4d6b0;
 }
 
 *,
@@ -21,10 +20,10 @@ html,
 body {
 	height: 100%;
 	width: 100%;
-	font-family: "Roboto Mono", "Courier New", monospace;
+	font-family: "Roboto Serif", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
-	background-color: #2d3142;
+	background-color: var(--primary-color);
 }
 
 img,
@@ -69,4 +68,16 @@ main {
 	width: calc(100% - 6rem);
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	row-gap: 10rem;
+
+	> div {
+		width: 50%;
+		display: flex;
+		justify-content: center;
+	}
+
+	> div:first-child {
+		width: 100%;
+	}
 }
